namespace Application.Datasets.Models.CreateDataset;

public sealed record CreateDatasetResponse(int Id);

